--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,8 @@
     <!-- Favicon principal: usa el logo .webp desde public/images -->
     <link rel="icon" type="image/webp" href="/images/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Versión canónica en HTTPS para que Google use esta URL -->
+    <link rel="canonical" href="https://karellpremium.com.co/" />
     
     <!-- Primary Meta Tags -->
     <title>Karell Premium - Tecnología y Accesorios Premium en Colombia</title>
@@ -21,6 +23,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Karell Premium" />
     <meta property="og:locale" content="es_CO" />
+    <meta property="og:title" content="Karell Premium - Tecnología y Accesorios Premium en Colombia" />
+    <meta property="og:description" content="Tienda online de tecnología y accesorios premium en Colombia. Los mejores gadgets, electrónicos y productos innovadores con envío a todo el país y servicio domicilio contraentrega." />
+    <meta property="og:url" content="https://karellpremium.com.co/" />
+    <meta property="og:image" content="https://karellpremium.com.co/images/logo.webp" />
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
