--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,8 +41,8 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Karell Premium",
-      "url": "https://karellpremium.com.co",
-      "logo": "https://karellpremium.com.co/images/logo.png",
+      "url": "https://www.karellpremium.com.co",
+      "logo": "https://www.karellpremium.com.co/images/logo.webp",
       "description": "Tienda online de tecnología y accesorios premium en Colombia",
       "address": {
         "@type": "PostalAddress",
@@ -64,10 +64,10 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Karell Premium",
-      "url": "https://karellpremium.com.co",
+      "url": "https://www.karellpremium.com.co",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://karellpremium.com.co/products?search={search_term_string}",
+        "target": "https://www.karellpremium.com.co/products?search={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
