--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
     <!-- Primary Meta Tags -->
     <title>Karell Premium - Tecnología y Accesorios Premium en Colombia</title>
     <meta name="title" content="Karell Premium - Tecnología y Accesorios Premium en Colombia" />
-    <meta name="description" content="Tienda online de tecnología y accesorios premium en Colombia. Los mejores gadgets, electrónicos y productos innovadores con envío a todo el país y servicio domicilio contraentrega." />
+    <meta name="description" content="Compre audífonos diademas inalámbricos, Bluetooth y accesorios tecnológicos con excelente calidad de sonido, diseños moderno diadema y auricular a precios increíbles. Envíos rápidos a todo Colombia y domicilios contraentrega." />
     <meta name="keywords" content="tecnología, gadgets, accesorios, productos premium, electrónica, Colombia, tienda online, accesorios tecnológicos, pago contraentrega." />
     <meta name="author" content="Karell Premium" />
     <meta name="robots" content="index, follow" />
