datos estructurados con url correctas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,6 +37,95 @@
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
+      <!-- Datos estructurados de productos principales para Google -->
+      <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Product",
+        "name": "Audífonos Lenovo TH30",
+        "image": [
+          "https://www.karellpremium.com.co/images/lenovo_beig.webp"
+        ],
+        "description": "Audífonos Lenovo TH30 inalámbricos, Bluetooth, con cancelación de ruido.",
+        "brand": {
+          "@type": "Brand",
+          "name": "Lenovo"
+        },
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "COP",
+          "price": "99000",
+          "availability": "https://schema.org/InStock",
+          "url": "https://www.karellpremium.com.co/productos/lenovo-th30"
+        }
+      }
+      </script>
+      <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Product",
+        "name": "Audífonos F9",
+        "image": [
+          "https://www.karellpremium.com.co/images/F9.webp"
+        ],
+        "description": "Audífonos F9 inalámbricos, Bluetooth, deportivos y con estuche de carga.",
+        "brand": {
+          "@type": "Brand",
+          "name": "F9"
+        },
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "COP",
+          "price": "69000",
+          "availability": "https://schema.org/InStock",
+          "url": "https://www.karellpremium.com.co/productos/f9"
+        }
+      }
+      </script>
+      <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Product",
+        "name": "Auriculares SP16",
+        "image": [
+          "https://www.karellpremium.com.co/images/SP16.webp"
+        ],
+        "description": "Auriculares SP16 deportivos, resistentes al agua, con micrófono.",
+        "brand": {
+          "@type": "Brand",
+          "name": "SP16"
+        },
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "COP",
+          "price": "59000",
+          "availability": "https://schema.org/InStock",
+          "url": "https://www.karellpremium.com.co/productos/sp16"
+        }
+      }
+      </script>
+      <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Product",
+        "name": "Reloj inteligente - SmartWatch",
+        "image": [
+          "https://www.karellpremium.com.co/images/negro_1.webp"
+        ],
+        "description": "Reloj inteligente SmartWatch con monitor de actividad, notificaciones y pantalla táctil.",
+        "brand": {
+          "@type": "Brand",
+          "name": "SmartWatch"
+        },
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "COP",
+          "price": "129000",
+          "availability": "https://schema.org/InStock",
+          "url": "https://www.karellpremium.com.co/productos/smartwatch"
+        }
+      }
+      </script>
     
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
