--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,9 +16,9 @@
     <link rel="canonical" href="https://www.karellpremium.com.co/" />
     
     <!-- Primary Meta Tags -->
-    <title>Karell Premium - Tecnología y Accesorios Premium en Colombia</title>
-    <meta name="title" content="Karell Premium - Tecnología y Accesorios Premium en Colombia" />
-    <meta name="description" content="Compre audífonos diademas inalámbricos, Bluetooth y accesorios tecnológicos con excelente calidad de sonido, diseños moderno diadema y auricular a precios increíbles. Envíos rápidos a todo Colombia y domicilios contraentrega." />
+    <title>Audífonos Bluetooth Inalámbricos y Accesorios Tecnológicos al Mejor Precio | Karell Premium</title>
+    <meta name="title" content="Audífonos Bluetooth Inalámbricos y Accesorios Tecnológicos al Mejor Precio | Karell Premium" />
+    <meta name="description" content="Compra audífonos inalámbricos Bluetooth, diademas y accesorios tecnológicos con gran calidad de sonido 🔊 , diseño moderno y precios increíbles, 🚚 Envios a todos los municipios de colombia. ¡Compra ahora!." />
     <meta name="keywords" content="tecnología, gadgets, accesorios, productos premium, electrónica, Colombia, tienda online, accesorios tecnológicos, pago contraentrega." />
     <meta name="author" content="Karell Premium" />
     <meta name="robots" content="index, follow" />
@@ -30,8 +30,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Karell Premium" />
     <meta property="og:locale" content="es_CO" />
-    <meta property="og:title" content="Karell Premium - Tecnología y Accesorios Premium en Colombia" />
-    <meta property="og:description" content="Tienda online de tecnología y accesorios premium en Colombia. Los mejores gadgets, electrónicos y productos innovadores con envío a todo el país y servicio domicilio contraentrega." />
+    <meta property="og:title" content="Audífonos Bluetooth Inalámbricos | Karell Premium Colombia" />
+    <meta property="og:description" content="Audífonos Bluetooth inalámbricos y accesorios tecnológicos con pago contraentrega y envíos a toda Colombia." />
     <meta property="og:url" content="https://www.karellpremium.com.co/" />
     <meta property="og:image" content="https://www.karellpremium.com.co/images/logo.webp" />
     
@@ -51,10 +51,23 @@
           "@type": "Brand",
           "name": "Lenovo"
         },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "21"
+        },
+        "review": [{
+          "@type": "Review",
+          "author": { "@type": "Person", "name": "Cliente verificado" },
+          "datePublished": "2026-01-15",
+          "reviewBody": "Excelente calidad de sonido y batería duradera.",
+          "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+        }],
         "offers": {
           "@type": "Offer",
           "priceCurrency": "COP",
           "price": "99000",
+          "priceValidUntil": "2026-12-31",
           "availability": "https://schema.org/InStock",
           "url": "https://www.karellpremium.com.co/productos/lenovo-th30"
         }
@@ -73,10 +86,23 @@
           "@type": "Brand",
           "name": "F9"
         },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.7",
+          "reviewCount": "15"
+        },
+        "review": [{
+          "@type": "Review",
+          "author": { "@type": "Person", "name": "Cliente verificado" },
+          "datePublished": "2026-01-10",
+          "reviewBody": "Muy cómodos y el estuche es práctico.",
+          "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+        }],
         "offers": {
           "@type": "Offer",
           "priceCurrency": "COP",
           "price": "69000",
+          "priceValidUntil": "2026-12-31",
           "availability": "https://schema.org/InStock",
           "url": "https://www.karellpremium.com.co/productos/f9"
         }
@@ -95,10 +121,23 @@
           "@type": "Brand",
           "name": "SP16"
         },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.6",
+          "reviewCount": "9"
+        },
+        "review": [{
+          "@type": "Review",
+          "author": { "@type": "Person", "name": "Cliente verificado" },
+          "datePublished": "2026-01-12",
+          "reviewBody": "Resistentes y con buen sonido.",
+          "reviewRating": { "@type": "Rating", "ratingValue": "4" }
+        }],
         "offers": {
           "@type": "Offer",
           "priceCurrency": "COP",
           "price": "59000",
+          "priceValidUntil": "2026-12-31",
           "availability": "https://schema.org/InStock",
           "url": "https://www.karellpremium.com.co/productos/sp16"
         }
@@ -117,10 +156,23 @@
           "@type": "Brand",
           "name": "SmartWatch"
         },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.9",
+          "reviewCount": "12"
+        },
+        "review": [{
+          "@type": "Review",
+          "author": { "@type": "Person", "name": "Cliente verificado" },
+          "datePublished": "2026-01-20",
+          "reviewBody": "Muy útil para monitorear mi actividad diaria.",
+          "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+        }],
         "offers": {
           "@type": "Offer",
           "priceCurrency": "COP",
           "price": "129000",
+          "priceValidUntil": "2026-12-31",
           "availability": "https://schema.org/InStock",
           "url": "https://www.karellpremium.com.co/productos/smartwatch"
         }
