--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,9 +16,9 @@
     <link rel="canonical" href="https://www.karellpremium.com.co/" />
     
     <!-- Primary Meta Tags -->
-    <title>Audífonos Bluetooth, Relojes Inteligentes y Accesorios Tecnológicos | Karell Premium</title>
-    <meta name="title" content="Audífonos Bluetooth, Relojes Inteligentes y Accesorios Tecnológicos al Mejor Precio | Karell Premium" />
-    <meta name="description" content="Compra audífonos Bluetooth, relojes inteligentes y accesorios tecnológicos con envío a CALI, BOGOTÁ, MEDELLIN y toda Colombia y pago contra entrega. Calidad premium y precios increíbles en Karell Premium. ¡Compra ahora!." />
+    <title>Audífonos Bluetooth y Accesorios Tecnológicos al Mejor Precio en Colombia</title>
+    <meta name="title" content="Audífonos Bluetooth y Accesorios Tecnológicos al Mejor Precio en Colombia" />
+    <meta name="description" content="Compra audífonos Bluetooth, relojes inteligentes y accesorios tecnológicos en Colombia. Envíos rápidos, pago contra entrega y garantía." />
     <meta name="keywords" content="tecnología, gadgets, accesorios, productos premium, electrónica, Colombia, tienda online, accesorios tecnológicos, pago contraentrega." />
     <meta name="author" content="Karell Premium" />
     <meta name="robots" content="index, follow" />
