--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
 
         var routeMeta = {
           '/': {
-            title: 'Audífonos Bluetooth y Accesorios Tecnológicos al Mejor Precio en Colombia | Karell Premium',
+            title: 'Audífonos Bluetooth y Accesorios Tecnológicos al Mejor Precio en Colombia',
             description: 'Compra audífonos Bluetooth, relojes inteligentes y accesorios tecnológicos en Colombia. Envíos rápidos, pago contra entrega y garantía.',
             robots: 'index, follow'
           },
