--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Karell Premium" />
     <meta property="og:locale" content="es_CO" />
-    <meta property="og:title" content="Audífonos Bluetooth Inalámbricos | Karell Premium Colombia" />
+    <meta property="og:title" content="Audífonos Bluetooth y Accesorios Tecnológicos al Mejor Precio en Colombia" />
     <meta property="og:description" content="Audífonos Bluetooth inalámbricos y accesorios tecnológicos con pago contraentrega y envíos a toda Colombia." />
     <meta property="og:url" content="https://www.karellpremium.com.co/" />
     <meta property="og:image" content="https://www.karellpremium.com.co/images/logo.webp" /> 
