--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,8 +16,8 @@
     <link rel="canonical" href="https://www.karellpremium.com.co/" />
     
     <!-- Primary Meta Tags -->
-    <title>Audífonos Bluetooth y Accesorios Tecnológicos al Mejor Precio en Colombia</title>
-    <meta name="title" content="Audífonos Bluetooth y Accesorios Tecnológicos al Mejor Precio en Colombia" />
+    <title>Audífonos Bluetooth y Accesorios Tecnológicos al Mejor Precio Colombia</title>
+    <meta name="title" content="Audífonos Bluetooth y Accesorios Tecnológicos al Mejor Precio Colombia" />
     <meta name="description" content="Compra audífonos Bluetooth, relojes inteligentes y accesorios tecnológicos en Colombia. Envíos rápidos, pago contra entrega y garantía." />
     <meta name="keywords" content="tecnología, gadgets, accesorios, productos premium, electrónica, Colombia, tienda online, accesorios tecnológicos, pago contraentrega." />
     <meta name="author" content="Karell Premium" />
@@ -53,7 +53,7 @@
 
         var routeMeta = {
           '/': {
-            title: 'Audífonos Bluetooth y Accesorios Tecnológicos al Mejor Precio en Colombia',
+            title: 'Audífonos Bluetooth y Accesorios Tecnológicos al Mejor Precio Colombia',
             description: 'Compra audífonos Bluetooth, relojes inteligentes y accesorios tecnológicos en Colombia. Envíos rápidos, pago contra entrega y garantía.',
             robots: 'index, follow'
           },
