mejora en previsualizacion de productos2

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -201,6 +201,8 @@
     
   </head>
   <body>
+    <!-- Fallback H1 para crawlers sin JS (Bing/Webmaster) -->
+    <h1 style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">Karell Premium - Audífonos Bluetooth y Accesorios Tecnológicos en Colombia</h1>
     <div id="root"></div>
     <div id="modal-root"></div>
     <script type="module" src="/src/main.jsx"></script>
