mejora de canonical

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,8 @@
     <!-- Favicon alternativo webp (opcional) -->
     <link rel="icon" type="image/webp" href="/images/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Versión canónica en HTTPS para que Google use esta URL -->
-    <link rel="canonical" href="https://www.karellpremium.com.co/" />
+    <!-- Canonical base: vacío para no forzar home en rutas dinámicas no prerenderizadas -->
+    <link rel="canonical" href="" />
     
     <!-- Primary Meta Tags -->
     <title>Audífonos Bluetooth y Accesorios Tecnológicos al Mejor Precio Colombia</title>
