--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,6 +39,7 @@
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="1024" />
+    <meta property="fb:app_id" content="2050043085778371" />
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
